Handle 404 status code
